# voicebot

./: .gitignore  agent.py  app.py  bkp_realtime_voice_agent.py  captured_leads.json  lead_gen_openai_client.py  loan_agent.py  pipecat_rt_voice_agent(en).py  pipecat_rt_voice_agent(hi).py  pipecat_rt_voice_agent.py  pipecat_rt_voice_agent_mr.py  pyproject.toml  realtime_leads.json
