[tool.poetry]
name = "voice-loan-agent-poc"
version = "0.1.0"
description = "Voice-enabled customer service agent POC for loan company using OpenAI Agents"
authors = ["AB"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.28.0"
openai = "^1.3.0"
numpy = "<2.1"
sounddevice = "^0.4.6"
python-dotenv = "^1.0.0"
# Note: openai-agents needs to be installed separately via pip
# Run: pip install openai-agents 'openai-agents[voice]'
soundfile = "^0.13.1"
google-cloud-texttospeech = "^2.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
