[tool.poetry]
name = "voice-loan-agent-poc"
version = "0.1.0"
description = "Voice-enabled customer service agent POC for loan company using OpenAI Agents"
authors = ["AB"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.28.0"
openai = "^1.3.0"
numpy = "<2.1"
sounddevice = "^0.4.6"
python-dotenv = "^1.0.0"
soundfile = "^0.13.1"
# Google Cloud packages for enhanced Hindi TTS
google-cloud-texttospeech = "^2.16.0"
google-auth = "^2.17.0"
# Real-time voice processing with Pipecat (LATEST VERSION)
pipecat-ai = {extras = ["silero"], version = "^0.0.68"}
# Additional real-time dependencies (LATEST VERSIONS)
requests = "^2.31.0"
websockets = "*"
fastapi = "*"
uvicorn = "*"
pandas = "^2.0.0"
plotly = "^5.17.0"
deepgram-sdk = "^4.1.0"
daily-python = "^0.19.1"
torch = "^2.7.0"
google-cloud-speech = "^2.32.0"
google-genai = "^1.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"